...
                    vertical: 12,
                  ),
                ),
                onPressed: () {
                  Navigator.pushNamed(context, '/userTypeSelection');
                },
                child: const Text('Get Started'),
              ),
            ],
          ),
        ),
      ),
    );
...
